--- a/IecProjectApp/app/build.gradle
+++ b/IecProjectApp/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
     testImplementation 'junit:junit:4.12'
 }
