--- a/IecProjectApp/app/src/main/AndroidManifest.xml
+++ b/IecProjectApp/app/src/main/AndroidManifest.xml
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        <activity android:name=".view.MainActivity" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Register" />
-        <activity android:name=".Login" android:label="@string/app_name"></activity>
+        <activity android:name=".view.Register" />
+        <activity android:name=".view.Login" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
