--- a/IecProjectApp/app/src/main/AndroidManifest.xml
+++ b/IecProjectApp/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        <activity
+            android:name=".view.MainActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +18,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.Register" />
-        <activity android:name=".view.Login" android:label="@string/app_name"></activity>
+        <activity
+            android:name=".view.Login"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".InitialScreen"
+            android:label="@string/title_activity_initial_screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
