--- a/IecProjectApp/app/build.gradle
+++ b/IecProjectApp/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:25.4.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
